# Hyper-Glyph

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: algorithm.md  api.md  cli.md  index.md  roadmap.md
examples/: benchmark_hyperglyph_vs_quant.py  compress_mlp.py  compress_state_dict.py  evaluate_model_suite.py  mnist_demo.py
examples/artifacts/: sample-v0.2-benchmark.md  sample-v0.2.hwz
examples/artifacts/v0.3/: benchmark_compact.hwz  benchmark_payload_breakdown.md  benchmark_report.json  benchmark_report.md  benchmark_standard.hwz
examples/artifacts/v0.4/: benchmark_compact_codebook.hwz  benchmark_compact_int4.hwz  benchmark_payload_breakdown.md  benchmark_report.json  benchmark_report.md  benchmark_standard.hwz
examples/artifacts/v0.5/: benchmark_compact_auto.hwz  benchmark_compact_codebook.hwz  benchmark_compact_int4.hwz  benchmark_payload_breakdown.md  benchmark_report.json  benchmark_report.md  benchmark_standard.hwz
examples/artifacts/v0.6/: benchmark_compact_auto.hwz  benchmark_report.json  (+4 more)
src/hyperglyph/: __init__.py  archive.py  benchmark.py  blocks.py  cli.py  codec.py  compact_codec.py  config.py  evaluation.py  exceptions.py  global_codebook.py  hdc.py  metrics.py  packing.py  prototypes.py  quantization.py  residual.py  residual_budget.py  serialization.py  torch_adapter.py
tests/: test_archive.py  test_benchmark.py  test_benchmark_regression.py  test_blocks.py  test_cli.py  test_codec.py  test_compact_codec.py  test_evaluation.py  test_global_codebook.py  test_hdc.py  test_packing.py  test_prototypes.py  test_quantization.py  test_residual.py  test_residual_budget.py  test_serialization.py  test_torch_adapter.py
